samples/_failures_safe/1761391002_fdca24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73e5afbe.c: In function ‘main’:
./samples/SAFE/__tmp_73e5afbe.c:156:5: error: expected expression at end of input
  156 |     graph_add_edge(&g, a, b,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_73e5afbe.c:156:5: error: expected declaration or statement at end of input
